Working on single show layout, having issues with weird alignment bug inside panels with columns, not sure where it originates

--- a/src/app/client/shows/shows.component.scss
+++ b/src/app/client/shows/shows.component.scss
@@ -17,3 +17,13 @@ button:focus {
   max-height: 300px;
   overflow-y: auto;
 }
+
+.panel {
+  position: relative;
+}
+
+#single-show-summary {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
